Cherry-pick 781fc3abea74. rdar://problem/105021476

Unreviewed, Fix ASSERTION FAILED: mode == ManualOperandSpeculation || edge.useKind() == HeapBigIntUse
    https://bugs.webkit.org/show_bug.cgi?id=251722
    rdar://105021476

    Since it is now KnownCellUse, use lowCell.

    * Source/JavaScriptCore/ftl/FTLLowerDFGToB3.cpp:
    (JSC::FTL::DFG::LowerDFGToB3::compileCompareStrictEq):

    Canonical link: https://commits.webkit.org/259846@main

Canonical link: https://commits.webkit.org/259548.189@safari-7615-branch